- Reworked Ethiopian Industrial tree
- Changed a handful of Ethiopian focus triggers
- Added Xinjiang SAR focus
- Fixed 'Alliance to Rival NATO' focus not creating a faction
- New Italian Tree
- New Canadian Tree
- United States of Europe (USoE) focus tree
- President of the European Federation (POTEF) focus tree
- New Extension to Brazils Focus Tree
- New Greece Tree

Gameplay/Mechanics
- Annexing Puppets Yields Cores on their core territory (prevents a uber aggressive nation conquering other countries and then annexing them to gain all cores on all their lands)
- Annexing Puppets forces you to inherit their treasury, debt and international investments
- Nukes are toggable now via the Game Rule
- Generals now can take 24 units rather then 15
- Max experience has been buffed to 1000 from 500
- Nerfed Biofuel refineries to cost 25000 from 45000
- European Council (Reworked Voting System, Voting Prediction)
- European Parliament
- European Union Budget
- Breach of European values
- Reworked EU Tutorial
- Reworked Influence Mechanics - Better balance with more AI usefulness, new military aid option
- Mexican Drug Cartels
- New Scripted Diplomatic Action - Trade Agreement
- New Mafia Mechanics
- Forambles: Arab Republic, Baltic Union, Central America, Gran Colombia, Scandinavia, Iberia
- New EU Council mechanics
- EU Parliament
- EU Budget
- Breach of EU value system
- POTEF election system

Graphics
- Added missing Portuguese Portraits
- City graphics for all of Africa, Russia, Japan, China, Australia, New Zealand
- Graphics for some major landmarks like Mt Everest and Mt Kilimanjaro
- Additional Focus Icon Graphics added
- New Idea graphics
- Fixed Swiss portraits
- Fix to Spanish parties
- Metric fuckton of flags for you flag dweebs
- New Loading Screens

Localization
- Updated localization for Election Events
- Fixed typos in Game Rules
- Various focus tree localization improvements
- Updated Land Tech Doctrine Localization
- Updated localization for influence