@@ -129,6 +129,7 @@ scripted_gui = {
 					check_variable = { influence_array_calc^0 > 0.8 }
 					is_same_government = yes
 					NOT = { is_subject_of = ROOT }
+					is_subject = no
 					NOT = { has_war = yes }
 				}
 
