@@ -799,6 +799,49 @@ defined_text = {
 }
 
 defined_text = {
+	name = trigger5_select_make_puppet_button
+	text = {
+		trigger = {
+			is_subject = yes
+		}
+	   localization_key = trigger5_make_puppet_button_true
+	}
+	text = {
+	   #trigger = { always = yes }
+	   localization_key = trigger5_make_puppet_button_false
+	}
+
+}
+
+defined_text = {
+	name = influence_multiplier_display
+	text = {
+		trigger = { has_idea = non_power }
+		localization_key = influence_multiplier_display_non_power
+	}
+	text = {
+		trigger = { has_idea = minor_power }
+		localization_key = influence_multiplier_display_minor_power
+	}
+	text = {
+		trigger = { has_idea = regional_power }
+		localization_key = influence_multiplier_display_regional_power
+	}
+	text = {
+		trigger = { has_idea = large_power }
+		localization_key = influence_multiplier_display_large_power
+	}
+	text = {
+		trigger = { has_idea = great_power }
+		localization_key = influence_multiplier_display_great_power
+	}
+	text = {
+		trigger = { has_idea = superpower }
+		localization_key = influence_multiplier_display_super_power
+	}
+}
+
+defined_text = {
 	name = new_position_1
 	text = {
 		trigger = {
