@@ -2,7 +2,7 @@
  ##Generic Decisions for ALL - Sorted from MD_decisions_l_english.yml #11/21/2020
  ##### Influence Decisions #####
  influence_desicions: "[Root.GetAdjective] [GetYear] Report on Foreign Influence"
- influence_desicions_desc: "The Intelligence Services of [Root.GetNameDef] have prepared a report on the influence foreign governments to wield upon our nation. For the sake of our sovereignty, we must seek to limit this influence. If a single nation dominates us, they may seek to interfere in the government and our way of life.\nNote: The §YInfluence Multiplier§! increases the effectiveness of your influence actions.\n\n§HThe following nations hold influence over us:§!\n[new_position_1] [position_1_var] [position_1_var_integer]   [new_position_2] [position_2_var] [position_2_var_integer]   [new_position_3] [position_3_var] [position_3_var_integer]   [new_position_4] [position_4_var] [position_4_var_integer]   [new_position_5] [position_5_var] [position_5_var_integer]   [new_position_6] [position_6_var] [position_6_var_integer]   [new_position_7] [position_7_var] [position_7_var_integer]\n\nThis gives us a level of independence from foreign influence of [?domestic_influence_amount_calc|%H0] ([?domestic_influence_amount]).\n§YInfluence Total:§! [?influence_total]\nYour Nation's §YInfluence Multiplier§!: [?ROOT.influence_multiplier|0%G]\n"
+ influence_desicions_desc: "The Intelligence Services of [Root.GetNameDef] have prepared a report on the influence foreign governments to wield upon our nation. For the sake of our sovereignty, we must seek to limit this influence. If a single nation dominates us, they may seek to interfere in the government and our way of life.\nNote: The §YInfluence Multiplier§! increases the effectiveness of your influence actions.\n\n§HThe following nations hold influence over us:§!\n[new_position_1] [position_1_var] [position_1_var_integer]   [new_position_2] [position_2_var] [position_2_var_integer]   [new_position_3] [position_3_var] [position_3_var_integer]   [new_position_4] [position_4_var] [position_4_var_integer]   [new_position_5] [position_5_var] [position_5_var_integer]   [new_position_6] [position_6_var] [position_6_var_integer]   [new_position_7] [position_7_var] [position_7_var_integer]\n\nThis gives us a level of independence from foreign influence of [?domestic_influence_amount_calc|%H0] ([?domestic_influence_amount]).\n§YInfluence Total:§! [?influence_total]\nYour Nation's §YInfluence Multiplier§!: [influence_multiplier_display]\n"
  combat_foreign_influence: "Combat foreign influence"
  combat_foreign_influence_desc: "Asserting our independence from foreign influence is key to preserving our nation."
  increase_domestic_influence_amount_TT: "Increases Domestic Independence by §G4%§!\n"
@@ -100,7 +100,16 @@
  trigger3_make_puppet_button_false: "£trigger_no  [From.GetNameWithFlag] is at peace"
  trigger4_make_puppet_button_true: "£trigger_yes  [From.GetNameWithFlag] is not subject of [Root.GetNameWithFlag]"
  trigger4_make_puppet_button_false: "£trigger_no  [From.GetNameWithFlag] is not subject of [Root.GetNameWithFlag]"
- created_puppet_loc: "Set up Puppet Regime"
+ trigger5_make_puppet_button_true: "£trigger_yes  [From.GetNameWithFlag] is independent"
+ trigger5_make_puppet_button_false: "£trigger_no  [From.GetNameWithFlag] is independent"
+ influence_multiplier_display: "[influence_multiplier_display]"
+ influence_multiplier_display_non_power: "§R-25%§!
+ influence_multiplier_display_minor_power: "§G+10%§!"
+ influence_multiplier_display_regional_power: "§G+20%§!"
+ influence_multiplier_display_large_power: "§G+30%§!"
+ influence_multiplier_display_great_power: "§G+40%§!"
+ influence_multiplier_display_super_power: "§G+50%§!"
+ created_puppet_loc: "Set up Puppet Regime": "
  trigger_manipulate_politics_value_1: "1"
  trigger_manipulate_politics_value_2: "2"
  trigger_manipulate_politics_value_3: "3"
