@@ -75,6 +75,7 @@ Focus Trees
 - President of the European Federation (POTEF) focus tree
 - New Extension to Brazils Focus Tree
 - New Greece Tree
+- New Israeli Tree (NOT FINISHED, PLAYABLE)
 
 Gameplay/Mechanics
 - Annexing Puppets Yields Cores on their core territory (prevents a uber aggressive nation conquering other countries and then annexing them to gain all cores on all their lands)
@@ -98,6 +99,7 @@ Gameplay/Mechanics
 - EU Budget
 - Breach of EU value system
 - POTEF election system
+- Reduced influence gain from investments to prevent spam
 
 Graphics
 - Added missing Portuguese Portraits
